--- a/blog.html
+++ b/blog.html
@@ -18,6 +18,44 @@
 
 <!-- page_bgn -->
     <h2>
+      <span class='mw-headline' id='Release:_v2.10.3.1_.282015-10-18_20:15_Sun.29'>Release: v2.10.3.1 (2015-10-18 20:15 Sun)</span>
+    </h2>
+    <p>
+      v2.10.3 is a minor release. There are a few minor fixes for issues related to v2.10.2.
+    </p>
+    <h3>
+      <span class='mw-headline' id='Minor_fixes'>Minor fixes</span>
+    </h3>
+    <p>
+      There are two worth mentioning:
+    </p>
+    <ul>
+      <li>
+        Commons wiki would not download files
+      </li>
+      <li>
+        Mediawiki would not handle the translate function
+      </li>
+    </ul>
+    <p>
+      The rest are more trivial in comparison. You can check the <a href="/wiki/Help:Change_log" id="xowa_lnki_21" title="Change log" class="xowa-visited">Help:Change log</a> for more detail.
+    </p>
+    <h3>
+      <span class='mw-headline' id='Image_packages_for_Serbian.2C_Malay_and_Bulgarian_wikis'>Image packages for Serbian, Malay and Bulgarian wikis</span>
+    </h3>
+    <p>
+      I'm uploading Bulgarian now, but the rest should be ready at archive.org. See: <a href="https://archive.org/details/Xowa_srwiki_latest" class="external text" rel="nofollow">https://archive.org/details/Xowa_srwiki_latest</a> <a href="https://archive.org/details/Xowa_mswiki_latest" class="external text" rel="nofollow">https://archive.org/details/Xowa_mswiki_latest</a> and <a href="https://archive.org/details/Xowa_bgwiki_latest" class="external text" rel="nofollow">https://archive.org/details/Xowa_bgwiki_latest</a>
+    </p>
+    <h3>
+      <span class='mw-headline' id='Next_release:_v2.10.4'>Next release: v2.10.4</span>
+    </h3>
+    <p>
+      I'm still waiting on commons / wikidata before doing an English Wikipedia update. I'll work on Hebrew this week and Norwegian / Vietnamese as well.
+    </p>
+    <p>
+      For code, I'm going to change tack again and table the article update function. I'm working on a different XOWA Android UI with hopes of updating the alpha in the next few weeks.
+    </p>
+    <h2>
       <span class='mw-headline' id='Release:_v2.10.2.1_.282015-10-11_22:45_Sun.29'>Release: v2.10.2.1 (2015-10-11 22:45 Sun)</span>
     </h2>
     <p>
