--- a/download.html
+++ b/download.html
@@ -21,31 +21,31 @@
 
 <h2><span class='mw-headline' id='Windows'> Windows </span></h2>
 <ul>
-  <li> <a href="https://github.com/gnosygnu/xowa/releases/download/v2.10.2.1/xowa_app_windows_64_v2.10.2.1.zip" class="external text" rel="nofollow">Windows (64-bit)</a>
+  <li> <a href="https://github.com/gnosygnu/xowa/releases/download/v2.10.3.1/xowa_app_windows_64_v2.10.3.1.zip" class="external text" rel="nofollow">Windows (64-bit)</a>
   </li>
-  <li> <a href="https://github.com/gnosygnu/xowa/releases/download/v2.10.2.1/xowa_app_windows_v2.10.2.1.zip" class="external text" rel="nofollow">Windows (32-bit)</a>
+  <li> <a href="https://github.com/gnosygnu/xowa/releases/download/v2.10.3.1/xowa_app_windows_v2.10.3.1.zip" class="external text" rel="nofollow">Windows (32-bit)</a>
   </li>
 </ul>
 
 <h2><span class='mw-headline' id='Linux'> Linux </span></h2>
 <ul>
-  <li> <a href="https://github.com/gnosygnu/xowa/releases/download/v2.10.2.1/xowa_app_linux_64_v2.10.2.1.zip" class="external text" rel="nofollow">Linux (64-bit)</a>
+  <li> <a href="https://github.com/gnosygnu/xowa/releases/download/v2.10.3.1/xowa_app_linux_64_v2.10.3.1.zip" class="external text" rel="nofollow">Linux (64-bit)</a>
   </li>
-  <li> <a href="https://github.com/gnosygnu/xowa/releases/download/v2.10.2.1/xowa_app_linux_v2.10.2.1.zip" class="external text" rel="nofollow">Linux (32-bit)</a>
+  <li> <a href="https://github.com/gnosygnu/xowa/releases/download/v2.10.3.1/xowa_app_linux_v2.10.3.1.zip" class="external text" rel="nofollow">Linux (32-bit)</a>
   </li>
 </ul>
 
 <h2><span class='mw-headline' id='Mac_OS_X'> Mac OS X </span></h2>
 <ul>
-  <li> <a href="https://github.com/gnosygnu/xowa/releases/download/v2.10.2.1/xowa_app_macosx_64_v2.10.2.1.zip" class="external text" rel="nofollow">Mac OS X (64-bit)</a>
+  <li> <a href="https://github.com/gnosygnu/xowa/releases/download/v2.10.3.1/xowa_app_macosx_64_v2.10.3.1.zip" class="external text" rel="nofollow">Mac OS X (64-bit)</a>
   </li>
-  <li> <a href="https://github.com/gnosygnu/xowa/releases/download/v2.10.2.1/xowa_app_macosx_v2.10.2.1.zip" class="external text" rel="nofollow">Mac OS X (32-bit)</a>
+  <li> <a href="https://github.com/gnosygnu/xowa/releases/download/v2.10.3.1/xowa_app_macosx_v2.10.3.1.zip" class="external text" rel="nofollow">Mac OS X (32-bit)</a>
   </li>
 </ul>
 
 <h2><span class='mw-headline' id='Source'> Source code </span></h2>
 <ul>
-  <li> <a href="https://github.com/gnosygnu/xowa/archive/v2.10.2.1.zip" class="external text" rel="nofollow">Source code</a>
+  <li> <a href="https://github.com/gnosygnu/xowa/archive/v2.10.3.1.zip" class="external text" rel="nofollow">Source code</a>
   </li>
 </ul>
 
@@ -55,71 +55,45 @@
     </h2>
 
     <h2>
-      <span class='mw-headline' id='v2.10.2.1_.282015-10-11.29'>v2.10.2.1 (2015-10-11)</span>
+      <span class='mw-headline' id='v2.10.3.1_.282015-10-18.29'>v2.10.3.1 (2015-10-18)</span>
     </h2>
-    <p>
-      <b>major</b>
-    </p>
-    <ul>
-      <li>
-        Luaj: Increase maximum number of Lua local variables from 200 to 249 (affects broken references on 2.6 million en.w pages from 2015-10 dump). See: <a href="https://en.wikipedia.org/wiki/Earth">https://en.wikipedia.org/wiki/Earth</a> <a href="https://en.wikipedia.org/wiki/Module:Citation/CS1">https://en.wikipedia.org/wiki/Module:Citation/CS1</a> <a href="http://www.lua.org/source/5.1/luaconf.h.html" class="external text" rel="nofollow">http://www.lua.org/source/5.1/luaconf.h.html</a>
-      </li>
-      <li>
-        Lang: Support variant syntax for Chinese / Serbian languages (affects Chinese / Serbian pages not rendering correctly). See: <a href="https://sr.wikipedia.org/wiki/Земља">https://sr.wikipedia.org/sr-ec/Земља</a> <a href="https://sr.wikipedia.org/wiki/Земља">https://sr.wikipedia.org/sr-el/Земља</a>
-      </li>
-      <li>
-        Xtn.SyntaxHighlight: Update &lt;syntaxhighlight&gt; behavior (affects &lt;syntaxhighlight&gt; / &lt;source&gt; tags not showing correctly). See: <a href="https://en.wikipedia.org/wiki/Type_system">https://en.wikipedia.org/wiki/Type_system</a> <a href="https://en.wikipedia.org/wiki/Comment_(computer_programming)">https://en.wikipedia.org/wiki/Comment_(computer_programming)</a> <a href="https://en.wikipedia.org/wiki/Mergesort">https://en.wikipedia.org/wiki/Mergesort</a> <a href="https://uk.wikibooks.org/wiki/HTML">https://uk.wikibooks.org/wiki/HTML</a>
-      </li>
-    </ul>
     <p>
       <b>fix</b>
     </p>
     <ul>
       <li>
-        Xtn.Imagemap: Fix imagemap not showing "desc" attribute (affects imagemap not showing describe info). See: <a href="https://zh.wikipedia.org/wiki/加拿大行政区划">https://zh.wikipedia.org/wiki/加拿大行政区划</a> [broken since:v2.9.3.1]
+        File: Fix files not downloading for commons.wikimedia.org {detected by Miles}. See: <a href="https://commons.wikimedia.org/wiki/Featured_pictures">https://commons.wikimedia.org/wiki/Commons:Featured_pictures</a> [broken since:v2.10.2.1]
       </li>
       <li>
-        Http_server: Do not release unique ids if max_clients not specified (affects error messages in console if http_server.max_clients not specified). [broken since:v2.9.3.1]
-      </li>
-      <li>
-        Http_server: Fix broken support for "--http_server_home" {detected by MDE}. [broken since:v2.8.1.1]
-      </li>
-      <li>
-        Wikidata: Fix incorrect twisty image after clicking. [broken since:v2.8.5.1]
+        Xtn.Translate: Always enable &lt;translate&gt; (affects &lt;translate&gt; and &lt;languages&gt; not working on some www.mediawiki.org pages). See: <a href="https://www.mediawiki.org/wiki/Download">https://www.mediawiki.org/wiki/Download</a> [broken since:v2.10.2.1]
       </li>
     </ul>
     <p>
-      <b>add</b>
+      <b>change</b>
     </p>
     <ul>
       <li>
-        Site.cfg: Enable extensions on a per-wiki basis (affects some pages showing wrong content); EX:&lt;do&gt; should not be enabled on en.w {detected by bmihal}. See: <a href="https://en.wikipedia.org/wiki/Type_system">https://en.wikipedia.org/wiki/Type_system</a> <a href="https://fr.wikipedia.org/wiki/Wikipédia:Le">https://fr.wikipedia.org/wiki/Wikipédia:Le</a> Bistro/13_novembre_2008
+        Lang: Handle variants inside html tags (affects incorrect content for some pages on Chinese / Serbian wikis); EX:&lt;img id='hk' title='hk-{hk}-hk' class='hk'/&gt;. See: <a href="https://sr.wikinews.org/wiki/Проглашени_победници_„Вики_воли_Земљу">https://sr.wikinews.org/wiki/Проглашени_победници_„Вики_воли_Земљу</a>"
       </li>
       <li>
-        Site.cfg: Enable interwiki aliases on a per-wiki basis [[Help:Site_config]].
+        ParserFunctions: Support "pages", "files", "subcats" for {{PAGESINCATEGORY}} (affects expression error on some pages). See: <a href="https://zh.wikipedia.org/wiki/Wikipedia:电子游戏专题/状态图表">https://zh.wikipedia.org/wiki/Wikipedia:电子游戏专题/状态图表</a> <a href="https://commons.wikimedia.org/wiki/Featured_pictures">https://commons.wikimedia.org/wiki/Commons:Featured_pictures</a>
       </li>
       <li>
-        Interwiki: Show all available languages "In other languages", not just those specified in xowa.gfs. See: <a href="https://en.wikipedia.org/wiki/Earth">https://en.wikipedia.org/wiki/Earth</a>
-      </li>
-      <li>
-        Import: Add support for building custom wikis. See: [[Help:Import/Dansguardian]]
+        Xtn.Intersection: Do not fail if ordermethod is invalid (affects missing content on some pages). See: <a href="https://sr.wiktionary.org/wiki/Викиречник:Википројекат_1001_арапска_реч/Списак_уноса">https://sr.wiktionary.org/wiki/Викиречник:Википројекат_1001_арапска_реч/Списак_уноса</a>
       </li>
     </ul>
     <p>
-      <b>significant</b>
+      <b>package</b>
     </p>
     <ul>
       <li>
-        File: Download file when clicking on "Size of this preview" {detected by anonymous4}. See: <a href="https://en.wikipedia.org/wiki/File:The_Earth_seen_from_Apollo_17.jpg">https://en.wikipedia.org/wiki/File:The_Earth_seen_from_Apollo_17.jpg</a>
+        Package: Release image update for Serbian wikis (2015-10). See: <a href="https://archive.org/details/Xowa_srwiki_latest" class="external text" rel="nofollow">https://archive.org/details/Xowa_srwiki_latest</a>
       </li>
       <li>
-        Bookmarks: Do not load bookmarks from cache (affects bookmarks page not showing recent changes when going back / forward) {detected by anonymous4}. See: <a href="https://simple.wikipedia.org/wiki/Special:XowaBookmarks">https://simple.wikipedia.org/wiki/Special:XowaBookmarks</a>
+        Package: Release image update for Malay wikis (2015-10). See: <a href="https://archive.org/details/Xowa_mswiki_latest" class="external text" rel="nofollow">https://archive.org/details/Xowa_mswiki_latest</a>
       </li>
       <li>
-        Lang: Handle recursive variants; EX:a-{b-{c}-d-{e}-f}-g. See: <a href="https://sr.wikipedia.org/wiki/Еквадор">https://sr.wikipedia.org/wiki/Еквадор</a>
-      </li>
-      <li>
-        Lang: Implement H macro; EX:-{H|zh-cn:cn;zh-hk:hk;zh-tw:tw}-. See: <a href="https://zh.wikivoyage.org/wiki/西安">https://zh.wikivoyage.org/wiki/西安</a> <a href="https://zh.wikipedia.org/wiki/Portal:首頁">https://zh.wikipedia.org/wiki/Portal:首頁</a>
+        Package: Release image update for Bulgarian wikis (2015-10). See: <a href="https://archive.org/details/Xowa_bgwiki_latest" class="external text" rel="nofollow">https://archive.org/details/Xowa_bgwiki_latest</a>
       </li>
     </ul>
     <p>
@@ -127,7 +101,7 @@
     </p>
     <ul>
       <li>
-        Url: Change tab name to match &lt;title&gt; name (affects tab name showing url on Chinese pages with variants) {detected by anonymous4}. See: <a href="https://zh.wikipedia.org/wiki/釣魚臺列嶼主權問題">https://zh.wikipedia.org/zh-cn/釣魚臺列嶼主權問題</a>
+        Javascript: Position notification in "top center" not "top right". See: [[Help:Options/Window]]
       </li>
     </ul>
     <p>
@@ -135,13 +109,7 @@
     </p>
     <ul>
       <li>
-        Xtn.Indicators: Warn if name is empty for &lt;indicators&gt; (affects messages in log). See: <a href="https://zh.wikipedia.org/wiki/Project:重庆维基人">https://zh.wikipedia.org/wiki/Project:重庆维基人</a>
-      </li>
-      <li>
-        Command-line: Do not show error window if app mode is command-line or http-server.
-      </li>
-      <li>
-        Site.cfg: Ignore "dispatch" property in "statistics" (affects warnings in log file).
+        Diagnostics: Fix broken diagnostic for Wikivoyage. See: [[Help:Diagnostics/Xtns/Wikivoyage/All]]
       </li>
     </ul>
     <p>
@@ -149,10 +117,10 @@
     </p>
     <ul>
       <li>
-        Doc: Add details for installing Firefox Addon for Pale Moon {suggested by pirate}. See: [[Help:XOWA viewer]]
+        Doc: Add documentation for standalone JRE {detected by Miles}. See: [[Help:Installing to a flash memory card]]
       </li>
       <li>
-        Doc: Add details for dansguardian filter. See: [[Help:Import/Dansguardian]]
+        Doc: Fix url for English Wikipedia images for Portal, Wikipedia and other namespaces {detected by Miles}. See: <a href="https://archive.org/download/Xowa_enwiki_latest/Xowa_enwiki_2015-06-02_file_v2b_wiki_file_ns-100.7z" class="external text" rel="nofollow">https://archive.org/download/Xowa_enwiki_latest/Xowa_enwiki_2015-06-02_file_v2b_wiki_file_ns-100.7z</a>
       </li>
     </ul>
     <p>
@@ -160,28 +128,7 @@
     </p>
     <ul>
       <li>
-        Source: Replace singleton identifier "_" with "Instance".
-      </li>
-      <li>
-        Source: Standardize To_* function names for Bry_bfr.
-      </li>
-      <li>
-        Source: Change Bry_fmtr_arg to Fmt__do.
-      </li>
-      <li>
-        Source: Refactor "In other languages".
-      </li>
-      <li>
-        Source: Refactor Xow_xwiki_mgr.
-      </li>
-      <li>
-        Source: Refactor Gfo_cmd_arg_mgr.
-      </li>
-      <li>
-        Source: Cleanup gplx.xowa.langs.
-      </li>
-      <li>
-        Source: Refactor Int_.
+        Source: Cleanup xowa namespaces.
       </li>
     </ul>
     
