--- a/image_dbs.html
+++ b/image_dbs.html
@@ -2220,62 +2220,61 @@
         </td>
         <td style='color:black; vertical-align:top;'>
           <p>
-            2014-07-04<br>
-            2014-07-03<br>
-            2014-06-22<br>
-            2014-06-22<br>
-            2014-06-24<br>
-            2014-06-22
+            2015-10-06
           </p>
         </td>
         <td style='color:black; vertical-align:top;'>
+          <p>
+            2015-10-18
+          </p>
         </td>
         <td style='color:black; vertical-align:top; text-align:right;'>
           <p>
-            5
+            6.2
           </p>
         </td>
         <td style='color:black; vertical-align:top;'>
           <p>
-            .sqlite3
+            .xowa
           </p>
         </td>
         <td style='color:black; vertical-align:top;'>
           <p>
-            <a href="https://archive.org/details/Xowa_srbundle_latest_including_wikipedia" class="external text" rel="nofollow">download</a><br>
+            <a href="https://archive.org/download/Xowa_srwiki_latest/Xowa_srbundle_2015-10-06.7z" class="external text" rel="nofollow">wikis and images</a>
           </p>
         </td>
       </tr>
       <tr style='color:black; border-collapse:collapse;'>
         <td style='color:black; vertical-align:top;'>
           <p>
-            <a href="https://ms.wikipedia.org/wiki/">http://ms.wikipedia.org</a><br>
-            <a href="https://ms.wiktionary.org/wiki/">http://ms.wiktionary.org</a><br>
-            <a href="https://ms.wikibooks.org/wiki/">http://ms.wikibooks.org</a>
+            <a href="https://ms.wikipedia.org/wiki/">https://ms.wikipedia.org</a><br>
+            <a href="https://ms.wiktionary.org/wiki/">https://ms.wiktionary.org</a><br>
+            <a href="https://ms.wikibooks.org/wiki/">https://ms.wikibooks.org</a>
           </p>
         </td>
         <td style='color:black; vertical-align:top;'>
           <p>
-            2014-06-21<br>
-            2014-07-02<br>
-            2014-06-26
+            2015-10-06
           </p>
         </td>
         <td style='color:black; vertical-align:top;'>
+          <p>
+            2015-10-18
+          </p>
         </td>
         <td style='color:black; vertical-align:top; text-align:right;'>
           <p>
-            1.7
+            2
           </p>
         </td>
         <td style='color:black; vertical-align:top;'>
           <p>
-            .sqlite3
+            .xowa
           </p>
         </td>
         <td style='color:black; vertical-align:top;'>
           <p>
-            <a href="https://archive.org/details/Xowa_msbundle_latest_including_wikipedia" class="external text" rel="nofollow">download</a><br>
+            <a href="https://archive.org/download/Xowa_mswiki_latest/Xowa_msbundle_2015-10-06.7z" class="external text" rel="nofollow">wikis and images</a>
           </p>
         </td>
       </tr>
@@ -2323,39 +2322,37 @@
       <tr style='color:black; border-collapse:collapse;'>
         <td style='color:black; vertical-align:top;'>
           <p>
-            <a href="https://bg.wikipedia.org/wiki/">http://bg.wikipedia.org</a><br>
-            <a href="https://bg.wiktionary.org/wiki/">http://bg.wiktionary.org</a><br>
-            <a href="https://bg.wikisource.org/wiki/">http://bg.wikisource.org</a><br>
-            <a href="https://bg.wikiquote.org/wiki/">http://bg.wikiquote.org</a><br>
-            <a href="https://bg.wikibooks.org/wiki/">http://bg.wikibooks.org</a><br>
-            <a href="https://bg.wikinews.org/wiki/">http://bg.wikinews.org</a>
+            <a href="https://bg.wikipedia.org/wiki/">https://bg.wikipedia.org</a><br>
+            <a href="https://bg.wiktionary.org/wiki/">https://bg.wiktionary.org</a><br>
+            <a href="https://bg.wikisource.org/wiki/">https://bg.wikisource.org</a><br>
+            <a href="https://bg.wikiquote.org/wiki/">https://bg.wikiquote.org</a><br>
+            <a href="https://bg.wikibooks.org/wiki/">https://bg.wikibooks.org</a><br>
+            <a href="https://bg.wikinews.org/wiki/">https://bg.wikinews.org</a>
           </p>
         </td>
         <td style='color:black; vertical-align:top;'>
           <p>
-            2014-07-28<br>
-            2014-07-25<br>
-            2014-07-11<br>
-            2014-07-10<br>
-            2014-07-11<br>
-            2014-07-10
+            2015-10-06
           </p>
         </td>
         <td style='color:black; vertical-align:top;'>
+          <p>
+            2015-10-18
+          </p>
         </td>
         <td style='color:black; vertical-align:top; text-align:right;'>
           <p>
-            3.3
+            4.4
           </p>
         </td>
         <td style='color:black; vertical-align:top;'>
           <p>
-            .sqlite3
+            .xowa
           </p>
         </td>
         <td style='color:black; vertical-align:top;'>
           <p>
-            <a href="https://archive.org/details/Xowa_bgwiki_latest" class="external text" rel="nofollow">download</a><br>
+            <a href="https://archive.org/download/Xowa_bgwiki_latest/Xowa_bgbundle_2015-10-06.7z" class="external text" rel="nofollow">wikis and images</a>
           </p>
         </td>
       </tr>
