--- a/index.html
+++ b/index.html
@@ -93,6 +93,16 @@
 </td>
 <td width='20%' valign='top' style='padding-left:5px;'> 
   <h2><span class='mw-headline' id='Recent_News'> Recent News </span></h2>
+  <b>2015-10-18</b> Serbian, Bulgarian and Malay wiki updates released<br/>
+  <ul>
+    <li> <a href="https://archive.org/details/Xowa_srwiki_latest" class="external text" rel="nofollow">Serbian wikis</a>
+    </li>
+    <li> <a href="https://archive.org/details/Xowa_mswiki_latest" class="external text" rel="nofollow">Malay wikis</a>
+    </li>
+    <li> <a href="https://archive.org/details/Xowa_bgwiki_latest" class="external text" rel="nofollow">Bulgarian wikis</a>
+    </li>
+  </ul>
+
   <b>2015-09-28</b> Hungarian and Thai wiki updates released<br/>
   <ul>
     <li> <a href="https://archive.org/details/Xowa_huwiki_latest" class="external text" rel="nofollow">Hungarian wikis</a>
