--- a/blog.html
+++ b/blog.html
@@ -18,6 +18,15 @@
 
 <!-- page_bgn -->
     <h2>
+      <span class='mw-headline' id='Release:_NONE_.282015-10-25_20:00_Sun.29'>Release: NONE (2015-10-25 20:00 Sun)</span>
+    </h2>
+    <p>
+      I'm skipping the release this week. I spent most of the time this week on the HTML dump as well as Android. I'm looking at doing the regular monthly release next week but don't expect any major issues.
+    </p>
+    <p>
+      I'm also working on the wikis below and will post during the week.
+    </p>
+    <h2>
       <span class='mw-headline' id='Release:_v2.10.3.1_.282015-10-18_20:15_Sun.29'>Release: v2.10.3.1 (2015-10-18 20:15 Sun)</span>
     </h2>
     <p>
